Working on a seperate branch
Nothing major just changing the branch and redoing
some code stuff

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
 
     <div class="display">
         <p>Your Collection:</p>
+    </div>
+    <div>
         <p id="contents"></p> 
     </div>
-
 
     
 
