--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <option value="Adventure">Adventure</option>
             <option value="Romance">Romance</option>
             <option value="Historical-Fiction">Historical Fiction</option>
-            
+            <option value="Documentary">Documentary</option>
         </select>
         
 
