Updated code counter and suggest
Updated the updated and suggested files need too
clean up the counter and need to add more variety
for the reccomended files wont spend too much time
with it since i finsihed the project. But learned
alot and might come back to finsih up the project
but might also just upload what i need too in order
to get through the assignment.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             VileBooks Changes the World 
         </div>
 
-        <div class="count">
-            Number of Books Read:
+        <div id="count">
+           Number of Book Read: 0
         </div>
     </nav>
     <h1>Welcome to the Library</h1>
@@ -72,9 +72,9 @@
 
 
 
-<div class="reccomend">
+<div id="suggest">
     <!-- Maybe -->
-    <h1>Books That we Reccomend: </h1>
+    <h1>Books That we Reccomend: <button type="button" onclick="booksSuggest()" >click</button></h1>
 </div>
 
  
